Meldelisten: Optische Verbesserungen + SheetFreeze-Bugfix
- Doppelte Trennlinie rechts der Nr-Spalte in allen Meldelisten (Supermelee, Schweizer, JGJ, Liga)
- SheetFreeze: Sheet vor freezeAtPosition() aktivieren (bugfix)
- Schweizer Meldeliste: Turniersystem-Anzeige in erster Headerzeile, Tabelle um eine Zeile nach unten verschoben
- JGJ + Liga Meldeliste: Turniersystem-Anzeige + Headerzeilen einfrieren
- Supermelee Meldeliste: Code-Cleanup mit Java 25 (var, List.of()), unused fields/methods entfernt
- UITests + JSON-Referenz an neue Zeilenstruktur angepasst